--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a href="https://google.qwiklabs.com/public_profiles/a92d17a6-2d3a-4e76-ba1b-0466ee7be5c8" target=”_blank”
+																									<a href="https://google.qwiklabs.com/public_profiles/a92d17a6-2d3a-4e76-ba1b-0466ee7be5c8" target="_blank"
 																										class="art-link art-color-link art-w-chevron">
 																										<span> See credential
 																										</span> </a>
@@ -459,7 +459,7 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a href="https://www.certiport.com/Portal/Pages/CredentialVerification.aspx" 
+																									<a href="https://www.certiport.com/Portal/Pages/CredentialVerification.aspx" target="_blank"
 																										class="art-link art-color-link art-w-chevron">
 																										<span> See credential
 																										</span> </a>
