--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 							</div>
 							<div class="art-ls-divider"></div>
 							<ul class="art-knowledge-list p-15-0">
-								<li>Bootstrap, Materialize</li>
-								<li>Stylus, Sass, Less</li>
-								<li>Gulp, Webpack, Grunt</li>
-								<li>GIT knowledge</li>
+								<li>Book: Sherlock Holmes, Harry Potter, Shinkai Makoto, Agatha Christie</li>
+								<li>Movie: Marvel, Netflix TV Series</li>
+								<li>Music: Chillies(VN), Alec Benjamin </li>
+								<li>Game: PUBG, CS:GO</li>
 							</ul>
 							<div class="art-ls-divider"></div>
 							<div class="art-links-frame p-15-15"> <a href="https://drive.google.com/" class="art-link"
