--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,7 @@
 						<div id="scrollbar2" class="art-scroll-frame">
 							<div class="art-table p-15-15">
 								<ul>
-									<li>
-										<h6>School:</h6><span style="float:right;text-align: right; margin-top: -3px;"> Hanoi University of Science and Technology (HUST) </span>
-									</li>
+								
 									<li>
 										<h6>City:</h6><span>Ha Noi</span>
 									</li>
@@ -300,7 +298,7 @@
 																								<div>
 																									<ul>
 																										<li><strong>Email:</strong>
-																											luvanductn1999@mail.com
+																											luuvanductn1999@gmail.com
 																										</li>
 																										<li><strong>Telegram:</strong>
 																											@duc_luuvan</li>
