--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="My name is Luu Van Duc. I'm the student of HUST, my major is Electronic and Telecomunication. This is my resume.
-">
+	<meta name="description" content="My name is Luu Van Duc. I'm the student of HUST, my major is Electronic and Telecomunication. This is my resume.">
 	<link rel="icon" href="image/logo.png" type="image/icon type">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
