--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 																								<h5 class="mb-15">
 																									Education Management System</h5>
 																								<div class="mb-15">[2019] C#, WinForms Framework, DevExpress, SQL Server</div> <a
-																									href="../portfolio/fitness-trainer-ui-card/index.html"
+																									href="#"
 																									class="art-link art-color-link art-w-chevron">Read
 																									more</a>
 																							</div>
@@ -563,7 +563,7 @@
 																								</h5>
 																								<div class="mb-15">
 																									[2017] Arduino UNO R3</div>
-																								<a href="../portfolio/vie-visiting-print-card/index.html"
+																								<a href="#"
 																									class="art-link art-color-link art-w-chevron">Read
 																									more</a>
 																							</div>
@@ -587,7 +587,7 @@
 																								<h5 class="mb-15">Cheat tools for Trivia: Confetti
 																								</h5>
 																								<div class="mb-15">[2019] OpenCV, Pytesseract, Selenium, TelegramBot</div> <a
-																									href="../portfolio/flow-focus-sketch-design/index.html"
+																									href="#"
 																									class="art-link art-color-link art-w-chevron">Read
 																									more</a>
 																							</div>
@@ -613,7 +613,7 @@
 																								<div class="mb-15">
 																									[2020] ESP8266, Python, Thingspeak, AWS Elastic Compute
 																								</div> <a
-																									href="../portfolio/%d1%81ardboard-%d1%81up-mockup/index.html"
+																									href="#"
 																									class="art-link art-color-link art-w-chevron">Read
 																									more</a>
 																							</div>
