--- a/index.html
+++ b/index.html
@@ -682,6 +682,34 @@
 																							</div>
 																						</div>
 																					</div>
+
+																					<div class="col-lg-4 col-md-6">
+																						<div
+																							class="art-a art-service-icon-box">
+																							<div
+																								class="art-service-ib-content">
+																								<h5 class="mb-15">
+																									<span>  JavaScript Algorithms and Data Structures
+																									</span> <br>
+																									<span>  [FreeCodeCamp]
+																									</span></h5>
+																								<div class="mb-15">
+																									<div>
+																										<p> Course contain : Basic JavaScript, Basic Data Structures, Basic Algorithm Scripting.
+																										</p>
+																									</div>
+																								</div>
+																								<div
+																									class="art-buttons-frame">
+																									<a href="https://www.freecodecamp.org/certification/luuvanduc1999/javascript-algorithms-and-data-structures" target="_blank"
+																										class="art-link art-color-link art-w-chevron"> 
+																										<span> See credential
+																										</span>  </a>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+
 																					<div class="col-lg-4 col-md-6">
 																						<div
 																							class="art-a art-service-icon-box">
