fix space, add footer

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             </div>
         </div>
     </div>
+    <div class="foot">
+        © Designed by LuuVanDuc, 2021
+    </div>
 </body>
 
 </html>
