--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="vi">
 
 <head>
+    <title>CV | LuuVanDuc</title>
+    <link rel="icon" href="logo.png">
     <meta charset="utf-8" />
     <link rel="icon" href="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
