--- a/index.html
+++ b/index.html
@@ -56,12 +56,25 @@
             </a>
         </div>
     </div>
+
     <div class="main container-fluid">
         <div id="my-row" class="row" style="width:100%">
 
 
             <div class="col-12 col-md-8 main-grid">
                 <div class="content-range">
+                    <div class="main-title">ACTIVITIES</div>
+                    <div class=content-main> 
+                        <p> <b><i class="fas fa-history"></i> HoChiMinh Communist Youth Union - School of Electronics and Telecommunications </b> </p>
+                        <p> <i class="fas fa-code-branch"></i>  <i> Designer</i>
+                        <p>Duration: 2017-2019</p>
+                    </div>
+                    <div class=content-main> 
+                        <p> <b><i class="fas fa-history"></i> FPT Software </b> </p>
+                        <p> <i class="fas fa-code-branch"></i>  <i> Intern: C++</i>
+                        <p>Duration: 7/2020-8/2020</p>
+                    </div>
+
                     <div class="main-title">PROJECTS</div>
                     <div class=content-main> 
                         <p> <b><i class="fas fa-code"></i> Gas Detector Device with Arduino UNO </b> </p>
@@ -77,8 +90,35 @@
                         <p> <i class="fas fa-code-branch"></i> <b>Course projects:</b> Applied Software Engineering - <i class="fas fa-calendar-week"></i> <b>Year: </b>2019  </p>
                         <p>• Descriptions: Build an online management system for primary school to manage student, teacher,
                             schedule, scoreboard. The software used WinForm C# with modern UI from DevExpress Packages.<p>
-                        <p>• Tech stack:  Winform C#, DevExpress Framework, Azure SQL Server.</p>
+                        <p>• Tech stack: Winform C#, DevExpress Framework, Azure SQL Server.</p>
                         <a href="https://github.com/luuvanduc1999/Education-Management-System" target="_blank">
+                            <button class="btn btn-success btn-repos">Repository</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-code"></i>  Cheat tools for Trivia: Confetti  </b> </p>
+                        <p> <i class="fas fa-code-branch"></i> <b>Personal projects </b> - <i class="fas fa-calendar-week"></i> <b>Year: </b>2019  </p>
+                        <p>• Descriptions: Get question and make Google search, choose the best match answer in 10s.<p>
+                        <p>• Tech stack: OpenCV, Pytesseract, Selenium, TelegramBot, Javascript.</p>
+                        <a href="https://github.com/luuvanduc1999/AutoSeachConfettiVN" target="_blank">
+                            <button class="btn btn-success btn-repos">Repository</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-code"></i> NEWS Reader Device   </b> </p>
+                        <p> <i class="fas fa-code-branch"></i> <b>Course projects:</b> Microprocessors - <i class="fas fa-calendar-week"></i> <b>Year: </b>2020  </p>
+                        <p>• Descriptions: Device connect to Wifi and GET NEWS from Thingspeak and show on screen, after cloud computer prasing NEWS from VnExpress RSS with Python and PUT to Thingspeak.<p>
+                        <p>• Tech stack: ESP8266 E12, Python, Thingspeak, AWS Elastic Compute, RSS.</p>
+                        <a href="https://github.com/luuvanduc1999/NEWSReader_RSS_ESP8266" target="_blank">
+                            <button class="btn btn-success btn-repos">Repository</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-code"></i> Advanced Hashing Password   </b> </p>
+                        <p> <i class="fas fa-code-branch"></i> <b>Course projects:</b> Theory of Cryptography - <i class="fas fa-calendar-week"></i> <b>Year: </b>2020  </p>
+                        <p>• Descriptions: Method of storing passwords both on the server-side and client-side, generates secure passwords hash value by enhancing with a sizeable random salt string. <p>
+                        <p>• Tech stack: Python, SQL Server, SHA512.</p>
+                        <a href="https://github.com/luuvanduc1999/SHA512_with_SALT" target="_blank">
                             <button class="btn btn-success btn-repos">Repository</button>
                         </a>
                     </div>
@@ -88,12 +128,29 @@
                     <div class=content-main>
                         <p> <b><i class="fas fa-certificate"></i>  Responsive Web Design [FreeCodeCamp]   </b> </p>
                         <p>• Course contain : Basic HTML and HTML5, Basic CSS, Applied Visual Design, Applied Accessibility,
-                            Responsive Web Design Principles, CSS Flexbox, CSS Grid.<p>
+                            Responsive Web Design Principles, CSS Flexbox, CSS Grid.</p>
                         <a href="https://www.freecodecamp.org/certification/luuvanduc1999/responsive-web-design" target="_blank">
                             <button class="btn btn-success btn-repos">View Certificate</button>
                         </a>
                     </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-certificate"></i>  FPT Software Campuslink C++ [FPT Software]  </b> </p>
+                        <p>Excellent completion of the "FPT Software Campuslink C++" course during the internship.</p>
+                        <a href="#" target="_blank">
+                            <button class="btn btn-success btn-repos">View Certificate</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-certificate"></i>  Microsoft Office Specialist : Microsoft Excel 2010  </b> </p>
+                        <p>Issue Date: 4/2015 </p>
+                        <p>   Credential ID : cT6B-uGFu </p>
+                        
+                        <a href="https://www.certiport.com/Portal/Pages/CredentialVerification.aspx" target="_blank">
+                            <button class="btn btn-success btn-repos">View Certificate</button>
+                        </a>
+                    </div>
                 </div>
+
             </div>
 
 
