--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <link rel="stylesheet/less" type="text/css" href="style.less" />
     <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,33 +27,41 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
     <div class="headx">
-        <p class="headx-name">
-            Duc Luu Van
-        </p>
-        <p class="headx-major"> 
-            Electronic and Telecommunications
-        </p>
-        <div class="col-4 col-md-2">
-            <a href="mailto:luuvanductn1999@gmail.com">
-                <button class="btn btn-success">EMAIL</button>
-            </a>
-        </div>
-        <div class="col-4 col-md-2">
-            <a href="tel:+84396859681">
-                <button class="btn btn-success">PHONE</button>
-            </a>
-        </div>
-        <div class="col-4 col-md-2">
-            <a href="https://facebook.com/duc.luuvan.pro "target="_blank">
-                <button class="btn btn-success">FACEBOOK</button>
-            </a>
+        <div class="container-fluid">
+            <div class="headx-logo d-none d-lg-inline-flex">
+                <img src="avatar.jpg" class="logo-top" />
+            </div>
+            <div class="headx-text">
+                <p class="headx-name">
+                    Duc Luu Van
+                </p>
+                <p class="headx-major"> 
+                    Electronic and Telecommunications
+                </p>
+                <div class="col-4 col-md-2">
+                    <a href="mailto:luuvanductn1999@gmail.com">
+                        <button class="btn btn-success">EMAIL</button>
+                    </a>
+                </div>
+                <div class="col-4 col-md-2">
+                    <a href="tel:+84396859681">
+                        <button class="btn btn-success">PHONE</button>
+                    </a>
+                </div>
+                <div class="col-4 col-md-2">
+                    <a href="https://facebook.com/duc.luuvan.pro "target="_blank">
+                        <button class="btn btn-success">FACEBOOK</button>
+                    </a>
+                </div>
+    
+                <div class="col-4 col-md-2">
+                    <a href="https://github.com/luuvanduc1999" target="_blank">
+                        <button class="btn btn-success">GITHUB</button>
+                    </a>
+                </div>
+            </div>   
         </div>
 
-        <div class="col-4 col-md-2">
-            <a href="https://github.com/luuvanduc1999" target="_blank">
-                <button class="btn btn-success">GITHUB</button>
-            </a>
-        </div>
     </div>
 
     <div class="main container-fluid">
@@ -63,7 +70,7 @@
 
             <div class="col-12 col-md-8 main-grid">
                 <div class="content-range">
-                    <div class="main-title">ACTIVITIES</div>
+                    <div class="main-title"><i class="fas fa-play"></i> ACTIVITIES</div>
                     <div class=content-main> 
                         <p> <b><i class="fas fa-history"></i> HoChiMinh Communist Youth Union - School of Electronics and Telecommunications </b> </p>
                         <p> <i class="fas fa-code-branch"></i>  <i> Designer</i>
@@ -75,7 +82,7 @@
                         <p>Duration: 7/2020-8/2020</p>
                     </div>
 
-                    <div class="main-title">PROJECTS</div>
+                    <div class="main-title"> <i class="fas fa-play"></i> PROJECTS</div>
                     <div class=content-main> 
                         <p> <b><i class="fas fa-code"></i> Gas Detector Device with Arduino UNO </b> </p>
                         <p> <i class="fas fa-code-branch"></i> <b>Course projects:</b>  Introduction to Engineering - <i class="fas fa-calendar-week"></i> <b>Year: </b>2017</p>
@@ -124,7 +131,7 @@
                     </div>
                 </div>
                 <div class="content-range">
-                    <div class="main-title">CERTIFICATE</div>
+                    <div class="main-title"><i class="fas fa-play"></i> CERTIFICATE</div>
                     <div class=content-main>
                         <p> <b><i class="fas fa-certificate"></i>  Responsive Web Design [FreeCodeCamp]   </b> </p>
                         <p>• Course contain : Basic HTML and HTML5, Basic CSS, Applied Visual Design, Applied Accessibility,
@@ -156,7 +163,7 @@
 
             <div class="col-12 col-md-4 second-grid">
                 <div class="content-range">
-                    <div class="second-title">INFORMATION</div>
+                    <div class="second-title"><i class="fas fa-pause"></i> INFORMATION</div>
                     <div class=content> 
                         <p> D.O.B: 30/01/1999</p>
                         <p> Come from Thai Nguyen City</p>
@@ -164,7 +171,7 @@
                     </div>
                 </div>
                 <div class="content-range">
-                    <div class="second-title">SKILLS</div>
+                    <div class="second-title"> <i class="fas fa-pause"></i> SKILLS</div>
                     <div class=content> 
                         <p> <b>Programming languages:</b> Python, C/C++, Javascript, SQL, C#</p>
                         <p> <b>Backends:</b> Python-django</p>
@@ -175,7 +182,7 @@
                     </div>
                 </div>
                 <div class="content-range">
-                    <div class="second-title">EDUCATION</div>
+                    <div class="second-title"><i class="fas fa-pause"></i> EDUCATION</div>
                     <div class=content> 
                         <p>
                             <b> THPT Chuyen Thai Nguyen</b>
