--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>CV | LuuVanDuc</title>
+    <title>Resume | LuuVanDuc</title>
     <link rel="icon" href="logo.png">
     <meta charset="utf-8" />
     <link rel="icon" href="">
@@ -168,6 +168,7 @@
                         <p> D.O.B: 30/01/1999</p>
                         <p> Come from Thai Nguyen City</p>
                         <p> Live in Ha Noi</p>
+                        <p> Last update: 27/06/2021</p>
                     </div>
                 </div>
                 <div class="content-range">
@@ -185,7 +186,7 @@
                     <div class="second-title"><i class="fas fa-pause"></i> EDUCATION</div>
                     <div class=content> 
                         <p>
-                            <b> THPT Chuyen Thai Nguyen</b>
+                            <b> <i class="fas fa-graduation-cap"></i> THPT Chuyen Thai Nguyen</b>
                         </p>
                         
                         <p> Major: Information Tecnology</p>
@@ -193,7 +194,7 @@
                     </div>
                     <div class=content> 
                         <p>
-                            <b> Hanoi University of Science and Technology</b>
+                            <b> <i class="fas fa-graduation-cap"></i> Hanoi University of Science and Technology</b>
                         </p>
                         
                         <p> Major:  Electronic and Telecommunications</p>
