--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <button class="btn btn-success"><i class="fab fa-linkedin"></i> LINKEDIN</button>
                 </a>
 
-                <a href="https://steamcommunity.com/id/voldemortvn/" target="_blank">
-                    <button class="btn btn-success"><i class="fab fa-steam"></i> STEAM</button>
+                <a href="#" target="_blank">
+                    <button class="btn btn-danger"><i class="fas fa-download"></i> DOWNDLOAD MY CV</button>
                 </a>
             </div>   
         </div>
@@ -129,6 +129,24 @@
                             <button class="btn btn-success btn-repos">Repository</button>
                         </a>
                     </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-code"></i>  Implement Universal Asynchronous Receiver Transmitter (UART) </b> </p>
+                        <p> <i class="fas fa-code-branch"></i> <b>Course projects:</b> VLSI Design - <i class="fas fa-calendar-week"></i> <b>Year: </b>2021  </p>
+                        <p>• Descriptions: There is a basic UART that support optional parity bit, settable baud and data width, written in Verilog with testbenches.                       <p>
+                        <p>• Tech stack: Verilog.</p>
+                        <a href="https://github.com/luuvanduc1999/UART_WithParityCodeCheck__Verilog" target="_blank">
+                            <button class="btn btn-success btn-repos">Repository</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-code"></i> Theater Booking System </b> </p>
+                        <p> <i class="fas fa-code-branch"></i> <b>Course projects:</b> Object Oriented Analysis and Design - <i class="fas fa-calendar-week"></i> <b>Year: </b>2021  </p>
+                        <p>• Descriptions: Theater Booking System Project: booking (choose movie, screening room, time) and confirm booking (by hash code). <p>
+                        <p>• Tech stack: Python-django.</p>
+                        <a href="https://github.com/luuvanduc1999/BookingTheaterOOD" target="_blank">
+                            <button class="btn btn-success btn-repos">Repository</button>
+                        </a>
+                    </div>
                 </div>
                 <div class="content-range">
                     <div class="main-title"><i class="fas fa-play"></i> CERTIFICATE</div>
@@ -175,7 +193,7 @@
                     <div class="second-title"> <i class="fas fa-pause"></i> SKILLS</div>
                     <div class=content> 
                         <p> <b>Programming languages:</b> Python, C/C++, Javascript, SQL, C#</p>
-                        <p> <b>Backends:</b> Python-django</p>
+                        <p> <b>Backends:</b> Python-django</p>, NodeJs
                         <p> <b>Frameworks:</b> ReactJs</p>
                         <p> <b>Tools:</b> Jupyter Notebook, Chrome Development Tools, Git, Figma, Boostrap, Vscode, Azure, Google
                             Cloud, AWS,...</p>
@@ -188,7 +206,6 @@
                         <p>
                             <b> <i class="fas fa-graduation-cap"></i> THPT Chuyen Thai Nguyen</b>
                         </p>
-                        
                         <p> Major: Information Tecnology</p>
                         <p> 8/2014 – 6/2017</p>
                     </div>
