--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <button class="btn btn-success"><i class="fab fa-linkedin"></i> LINKEDIN</button>
                 </a>
 
-                <a href="#" target="_blank">
+                <a href="/DucLuuVan.pdf">
                     <button class="btn btn-danger"><i class="fas fa-download"></i> DOWNDLOAD MY CV</button>
                 </a>
             </div>   
@@ -192,8 +192,8 @@
                 <div class="content-range">
                     <div class="second-title"> <i class="fas fa-pause"></i> SKILLS</div>
                     <div class=content> 
-                        <p> <b>Programming languages:</b> Python, C/C++, Javascript, SQL, C#</p>
-                        <p> <b>Backends:</b> Python-django</p>, NodeJs
+                        <p> <b>Programming languages:</b> <i class="fab fa-python"></i>Python, C/C++, <i class="fab fa-js"></i>Javascript, SQL, C#</p>
+                        <p> <b>Backends:</b> Django, <i class="fab fa-node-js"></i> NodeJs
                         <p> <b>Frameworks:</b> ReactJs</p>
                         <p> <b>Tools:</b> Jupyter Notebook, Chrome Development Tools, Git, Figma, Boostrap, Vscode, Azure, Google
                             Cloud, AWS,...</p>
