--- a/index.html
+++ b/index.html
@@ -192,31 +192,60 @@
                 <div class="content-range">
                     <div class="second-title"> <i class="fas fa-pause"></i> SKILLS</div>
                     <div class=content> 
-                        <p> <b>Programming languages:</b> <i class="fab fa-python"></i>Python, C/C++, <i class="fab fa-js"></i>Javascript, SQL, C#</p>
-                        <p> <b>Backends:</b> Django, <i class="fab fa-node-js"></i> NodeJs
-                        <p> <b>Frameworks:</b> ReactJs</p>
-                        <p> <b>Tools:</b> Jupyter Notebook, Chrome Development Tools, Git, Figma, Boostrap, Vscode, Azure, Google
-                            Cloud, AWS,...</p>
-                        <p> <b>Languages:</b> TOEIC HUSTEC 635 (2021)</p>
+                        <p> Programming languages:<br>
+                            <img alt="C++" src="https://img.shields.io/badge/C%2B%2B-00599C?logo=c%2B%2B&logoColor=white" > 
+                            <img alt="C#" src="https://img.shields.io/badge/C%23-239120?logo=c-sharp&logoColor=white" > 
+                            <img alt="Arduino" src="https://img.shields.io/badge/-Arduino-00979D?logo=Arduino&logoColor=white" > 
+                            <img alt="Python" src="https://img.shields.io/badge/Python-3776AB?logo=python&logoColor=white" > 
+                            <img alt="Js" src="https://img.shields.io/badge/JavaScript-F7DF1E?&logo=javascript&logoColor=black" >  
+                        </p>
+                        <p> Frontend: <br>
+                            <img alt="HTML5" src="https://img.shields.io/badge/HTML-239120?logo=html5&logoColor=white" > 
+                            <img alt="CSS" src="https://img.shields.io/badge/CSS-239120?logo=css3&logoColor=white" > 
+                            <img alt="JS" src="https://img.shields.io/badge/JavaScript-F7DF1E?logo=javascript&logoColor=black" > 
+                            <img alt="Jquery" src="https://img.shields.io/badge/jQuery-0769AD?logo=jquery&logoColor=white" > 
+                            <img alt="Bootstrap" src="https://img.shields.io/badge/Bootstrap-563D7C?logo=bootstrap&logoColor=white" > 
+                            <img alt="React" src="https://img.shields.io/badge/React-20232A?logo=react&logoColor=61DAF" > </p>
+                        <p> Backend:  <br>
+                            <img alt="NodeJs" src="https://img.shields.io/badge/Node.js-43853D?logo=node.js&logoColor=white" > 
+                            <img alt="ExpressJs" src="https://img.shields.io/badge/Express.js%20-%23404d59?logo=express&logoColor=whitee" > 
+                            <img alt="Django" src="https://img.shields.io/badge/Django-092E20?logo=django&logoColor=white" > </p>
+                        <p> Databases and cloud hosting: <br>
+                            <img src="https://img.shields.io/badge/SQLite-07405E?logo=sqlite&amp;logoColor=white" alt="SQLite" />
+                            <img src="https://img.shields.io/badge/MongoDB-4EA94B?logo=mongodb&amp;logoColor=white" alt="Mongdb" />
+                            <img src="http://img.shields.io/badge/-MS%20SQL%20Server-CC2927?logo=microsoft-sql-server&amp;logoColor=ffffff" alt="MS SQL Server" />
+                            <img src="https://img.shields.io/badge/Amazon_AWS-232F3E?logo=amazon-aws&amp;logoColor=white" alt="AWS" />
+                            <img src="https://img.shields.io/badge/Google_Cloud-4285F4?logo=google-cloud&amp;logoColor=white" alt="GC" />
+                            <img src="https://img.shields.io/badge/Microsoft_Azure-0089D6?logo=microsoft-azure&amp;logoColor=white" alt="Azure" />                                
+                        </p>
+                        <p> Tool:
+                            <img src="https://img.shields.io/badge/Git-100000?logo=git&amp;logoColor=white" alt="Git" />
+                            <img src="https://img.shields.io/badge/GitHub-100000?logo=github&amp;logoColor=white" alt="Github" />
+                            <img src="http://img.shields.io/badge/-Visual%20Studio%20Code-0078d7?logo=visual-studio-code&amp;logoColor=ffffff" alt="VS Code" />
+                            <img src="https://img.shields.io/badge/Jupyter-%23F37626.svg?logo=Jupyter&amp;logoColor=white" alt="Jupyter" />
+                            <img src="https://img.shields.io/badge/figma-%23F24E1E.svg?logo=figma&amp;logoColor=white" alt="Figma" />
+                            <img src="https://img.shields.io/badge/Android%20Studio-008678.svg?logo=android-studio&amp;logoColor=white" alt="Android Studio" />
+                            <img src="https://img.shields.io/badge/Postman-FF6C37?logo=postman&amp;logoColor=white" alt="Postman" />
+                            <img src="https://img.shields.io/badge/-Stack%20Overflow-FE7A16?logo=stack-overflow&amp;logoColor=white" alt="Stack Overflow" />
+                        </p>
+                        <p> Languages: TOEIC HUSTEC 635 (2021)</p>
                     </div>
                 </div>
                 <div class="content-range">
                     <div class="second-title"><i class="fas fa-pause"></i> EDUCATION</div>
                     <div class=content> 
                         <p>
-                            <b> <i class="fas fa-graduation-cap"></i> THPT Chuyen Thai Nguyen</b>
-                        </p>
-                        <p> Major: Information Tecnology</p>
-                        <p> 8/2014 – 6/2017</p>
+                            <b> <i class="fas fa-graduation-cap"></i> THPT Chuyen Thai Nguyen</b><br>
+                        
+                        Major: Information Tecnology<br>
+                        8/2014 – 6/2017</p>
                     </div>
                     <div class=content> 
                         <p>
-                            <b> <i class="fas fa-graduation-cap"></i> Hanoi University of Science and Technology</b>
-                        </p>
-                        
-                        <p> Major:  Electronic and Telecommunications</p>
-                        <p> CPA: 2.25</p>
-                        <p> 8/2017 - Now</p>
+                            <b> <i class="fas fa-graduation-cap"></i> Hanoi University of Science and Technology</b><br>
+                        Major:  Electronic and Telecommunications<br>
+                        CPA: 2.25<br>
+                        8/2017 - Now</p>
                     </div>
                 </div>
             </div>
