--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <img alt="NodeJs" src="https://img.shields.io/badge/Node.js-43853D?logo=node.js&logoColor=white" > 
                             <img alt="ExpressJs" src="https://img.shields.io/badge/Express.js%20-%23404d59?logo=express&logoColor=whitee" > 
                             <img alt="Django" src="https://img.shields.io/badge/Django-092E20?logo=django&logoColor=white" > </p>
-                        <p> Databases and cloud hosting: <br>
+                        <p> Databases and cloud hosting: 
                             <img src="https://img.shields.io/badge/SQLite-07405E?logo=sqlite&amp;logoColor=white" alt="SQLite" />
                             <img src="https://img.shields.io/badge/MongoDB-4EA94B?logo=mongodb&amp;logoColor=white" alt="Mongdb" />
                             <img src="http://img.shields.io/badge/-MS%20SQL%20Server-CC2927?logo=microsoft-sql-server&amp;logoColor=ffffff" alt="MS SQL Server" />
