--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <button class="btn btn-success"><i class="fab fa-linkedin"></i> LINKEDIN</button>
                 </a>
 
-                <a href="/DucLuuVan.pdf">
+                <a href="/CV_DucLuuVan.pdf" target="_blank">
                     <button class="btn btn-danger"><i class="fas fa-download"></i> DOWNDLOAD MY CV</button>
                 </a>
             </div>   
