--- a/index.html
+++ b/index.html
@@ -183,34 +183,34 @@
                 <div class="content-range">
                     <div class="second-title"><i class="fas fa-pause"></i> INFORMATION</div>
                     <div class=content> 
-                        <p> D.O.B: 30/01/1999</p>
-                        <p> Come from Thai Nguyen City</p>
-                        <p> Live in Ha Noi</p>
-                        <p> Last update: 27/06/2021</p>
+                        <p> D.O.B: 30/01/1999
+                        <br> Come from Thai Nguyen City
+                        <br> Live in Ha Noi
+                        <br> Last update: 27/06/2021</p>
                     </div>
                 </div>
                 <div class="content-range">
                     <div class="second-title"> <i class="fas fa-pause"></i> SKILLS</div>
                     <div class=content> 
-                        <p> Programming languages:<br>
+                        <p> <i class="fas fa-terminal"></i>Programming languages:<br>
                             <img alt="C++" src="https://img.shields.io/badge/C%2B%2B-00599C?logo=c%2B%2B&logoColor=white" > 
                             <img alt="C#" src="https://img.shields.io/badge/C%23-239120?logo=c-sharp&logoColor=white" > 
                             <img alt="Arduino" src="https://img.shields.io/badge/-Arduino-00979D?logo=Arduino&logoColor=white" > 
                             <img alt="Python" src="https://img.shields.io/badge/Python-3776AB?logo=python&logoColor=white" > 
                             <img alt="Js" src="https://img.shields.io/badge/JavaScript-F7DF1E?&logo=javascript&logoColor=black" >  
                         </p>
-                        <p> Frontend: <br>
+                        <p> <i class="fas fa-terminal"></i>Frontend: <br>
                             <img alt="HTML5" src="https://img.shields.io/badge/HTML-239120?logo=html5&logoColor=white" > 
                             <img alt="CSS" src="https://img.shields.io/badge/CSS-239120?logo=css3&logoColor=white" > 
                             <img alt="JS" src="https://img.shields.io/badge/JavaScript-F7DF1E?logo=javascript&logoColor=black" > 
                             <img alt="Jquery" src="https://img.shields.io/badge/jQuery-0769AD?logo=jquery&logoColor=white" > 
                             <img alt="Bootstrap" src="https://img.shields.io/badge/Bootstrap-563D7C?logo=bootstrap&logoColor=white" > 
                             <img alt="React" src="https://img.shields.io/badge/React-20232A?logo=react&logoColor=61DAF" > </p>
-                        <p> Backend:  <br>
+                        <p> <i class="fas fa-terminal"></i>Backend:  
                             <img alt="NodeJs" src="https://img.shields.io/badge/Node.js-43853D?logo=node.js&logoColor=white" > 
                             <img alt="ExpressJs" src="https://img.shields.io/badge/Express.js%20-%23404d59?logo=express&logoColor=whitee" > 
                             <img alt="Django" src="https://img.shields.io/badge/Django-092E20?logo=django&logoColor=white" > </p>
-                        <p> Databases and cloud hosting: 
+                        <p> <i class="fas fa-terminal"></i>Databases and cloud hosting: 
                             <img src="https://img.shields.io/badge/SQLite-07405E?logo=sqlite&amp;logoColor=white" alt="SQLite" />
                             <img src="https://img.shields.io/badge/MongoDB-4EA94B?logo=mongodb&amp;logoColor=white" alt="Mongdb" />
                             <img src="http://img.shields.io/badge/-MS%20SQL%20Server-CC2927?logo=microsoft-sql-server&amp;logoColor=ffffff" alt="MS SQL Server" />
@@ -218,7 +218,7 @@
                             <img src="https://img.shields.io/badge/Google_Cloud-4285F4?logo=google-cloud&amp;logoColor=white" alt="GC" />
                             <img src="https://img.shields.io/badge/Microsoft_Azure-0089D6?logo=microsoft-azure&amp;logoColor=white" alt="Azure" />                                
                         </p>
-                        <p> Tool:
+                        <p> <i class="fas fa-terminal"></i>Tool:
                             <img src="https://img.shields.io/badge/Git-100000?logo=git&amp;logoColor=white" alt="Git" />
                             <img src="https://img.shields.io/badge/GitHub-100000?logo=github&amp;logoColor=white" alt="Github" />
                             <img src="http://img.shields.io/badge/-Visual%20Studio%20Code-0078d7?logo=visual-studio-code&amp;logoColor=ffffff" alt="VS Code" />
@@ -228,7 +228,7 @@
                             <img src="https://img.shields.io/badge/Postman-FF6C37?logo=postman&amp;logoColor=white" alt="Postman" />
                             <img src="https://img.shields.io/badge/-Stack%20Overflow-FE7A16?logo=stack-overflow&amp;logoColor=white" alt="Stack Overflow" />
                         </p>
-                        <p> Languages: TOEIC HUSTEC 635 (2021)</p>
+                        <p> <i class="fas fa-terminal"></i>Languages: TOEIC HUSTEC 635 (2021)</p>
                     </div>
                 </div>
                 <div class="content-range">
