--- a/index.html
+++ b/index.html
@@ -159,14 +159,28 @@
                         </a>
                     </div>
                     <div class=content-main>
-                        <p> <b><i class="fas fa-certificate"></i>  FPT Software Campuslink C++ [FPT Software]  </b> </p>
-                        <p>Excellent completion of the "FPT Software Campuslink C++" course during the internship.</p>
-                        <a href="#" target="_blank">
+                        <p> <b><i class="fas fa-certificate"></i>  JavaScript (Basic) [HackerRank]   </b> </p>
+                        <p>• It covers topics like, Functions, Currying, Hoisting, Scope, Inheritance, Events and Error Handling.                        </p>
+                        <a href="https://www.hackerrank.com/certificates/85350c7eeeeb" target="_blank">
                             <button class="btn btn-success btn-repos">View Certificate</button>
                         </a>
                     </div>
                     <div class=content-main>
-                        <p> <b><i class="fas fa-certificate"></i>  Microsoft Office Specialist : Microsoft Excel 2010  </b> </p>
+                        <p> <b><i class="fas fa-certificate"></i>  Python (Basic) [HackerRank]   </b> </p>
+                        <p>• It covers topics like Scalar Types, Operators and Control Flow, Strings, Collections and Iteration, Modularity, Objects and Types and Classes.                        </p>
+                        <a href="https://www.hackerrank.com/certificates/bb15f88d7d70" target="_blank">
+                            <button class="btn btn-success btn-repos">View Certificate</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-certificate"></i>  Problem Solving (Basic) [HackerRank]   </b> </p>
+                        <p>• It covers basic topics of Data Structures (such as Arrays, Strings) and Algorithms (such as Sorting and Searching).                        </p>
+                        <a href="https://www.hackerrank.com/certificates/0c3681b6a861" target="_blank">
+                            <button class="btn btn-success btn-repos">View Certificate</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-certificate"></i>  Microsoft Office Specialist : Microsoft Excel 2010 [Certiport] </b> </p>
                         <p>Issue Date: 4/2015 </p>
                         <p>   Credential ID : cT6B-uGFu </p>
                         
