--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                         </a>
                     </div>
                     <div class=content-main>
-                        <p> <b><i class="fas fa-certificate"></i>  JavaScript (Basic) [HackerRank]   </b> </p>
+                        <p> <b><i class="fas fa-certificate"></i>  JavaScript (Intermediate) [HackerRank]   </b> </p>
                         <p>• It covers topics like, Functions, Currying, Hoisting, Scope, Inheritance, Events and Error Handling.                        </p>
-                        <a href="https://www.hackerrank.com/certificates/85350c7eeeeb" target="_blank">
+                        <a href="https://www.hackerrank.com/certificates/08f9f5c1c277" target="_blank">
                             <button class="btn btn-success btn-repos">View Certificate</button>
                         </a>
                     </div>
