--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
                         </a>
                     </div>
                     <div class=content-main>
+                        <p> <b><i class="fas fa-certificate"></i>  Google Ads Display Certification [Exceed LMS]  </b> </p>
+                        <p>• Expertise using Google Display to deliver results that get the most from your display advertising investmentability, develop effective Display strategies and campaigns that achieve specific marketing goals.</p>
+                        <a href="https://skillshop.exceedlms.com/student/award/d5fnx2ZfxR22GXoERiG2ndj4" target="_blank">
+                            <button class="btn btn-success btn-repos">View Certificate</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
                         <p> <b><i class="fas fa-certificate"></i>  Microsoft Office Specialist : Microsoft Excel 2010 [Certiport] </b> </p>
                         <p>Issue Date: 4/2015 </p>
                         <p>   Credential ID : cT6B-uGFu </p>
