--- a/index.html
+++ b/index.html
@@ -180,9 +180,16 @@
                         </a>
                     </div>
                     <div class=content-main>
-                        <p> <b><i class="fas fa-certificate"></i>  Google Ads Display Certification [Exceed LMS]  </b> </p>
+                        <p> <b><i class="fas fa-certificate"></i>  Google Ads Display Certification [Google Exceed LMS]  </b> </p>
                         <p>• Expertise using Google Display to deliver results that get the most from your display advertising investmentability, develop effective Display strategies and campaigns that achieve specific marketing goals.</p>
                         <a href="https://skillshop.exceedlms.com/student/award/d5fnx2ZfxR22GXoERiG2ndj4" target="_blank">
+                            <button class="btn btn-success btn-repos">View Certificate</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
+                        <p> <b><i class="fas fa-certificate"></i>  Creative Certification  [Google Exceed LMS]  </b> </p>
+                        <p>• The Creative Certification exam covers rich media creative setup using Google Web Design and Creative to build HTML5 and dynamic creatives. It also assesses the steps to preview, QA, and publish creatives to Campaign Manager, and then measure results.</p>
+                        <a href="https://skillshop.exceedlms.com/student/award/TLQuYgJNW5bNeQVTMjtrsom5" target="_blank">
                             <button class="btn btn-success btn-repos">View Certificate</button>
                         </a>
                     </div>
