--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Resume | LuuVanDuc</title>
     <link rel="icon" href="logo.png">
     <meta charset="utf-8" />
+    <meta name="description" content="This is resume of a student from HUST, an engineer looking for work in Programming.">
+    <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
+    <meta name="author" content="Đức Lưu Văn">
+    <meta property="og:image" content="top_banner.png">
     <link rel="icon" href="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -282,6 +286,7 @@
     <div class="foot">
         © Designed by LuuVanDuc, 2021
     </div>
+    <iframe src="https://open.spotify.com/embed/playlist/6NodikgZKy8jZZ4QyMAxIA?theme=0" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
 
 </html>
