Add get teams code site

--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>Resume | LuuVanDuc</title>
+    <title>SET | GetTeamsCode</title>
     <link rel="icon" href="logo.png">
     <meta charset="utf-8" />
     <meta name="description" content="This is resume of a student from HUST, an engineer looking for work in Programming.">
