Add get teams code site

--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -5,7 +5,7 @@
     <title>SET | GetTeamsCode</title>
     <link rel="icon" href="logo.png">
     <meta charset="utf-8" />
-    <meta name="description" content="This is resume of a student from HUST, an engineer looking for work in Programming.">
+    <meta name="description" content="Công cụ lấy code lớp MSTeams các mã lớp viện ĐTVT.">
     <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
     <meta name="author" content="Đức Lưu Văn">
     <meta property="og:image" content="thumb.png">
