Add get teams code site

--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -94,7 +94,8 @@
             <div class="card-header">Get MSTeams Code</div>
             <div class="card-body">
             <h5 class="card-title"><b>Công cụ lấy code Teams bằng mã lớp</b></h5>
-            <p class="card-text">Chỉ hỗ trợ viện ĐTVT. Chọn kỳ học(các kỳ onl gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không phải tất cả đều tìm được.</p>
+            <p class="card-text">Chỉ hỗ trợ viện ĐTVT, tìm mã lớp theo HP bằng QLĐT.
+                <br>Chọn kỳ học(các kỳ onl gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không phải tất cả đều tìm được (chỉ có link).</p>
             <div class="card">
                 <div class="card-body">
                     <div class="mb-3">
