Add get teams code site

--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -93,9 +93,9 @@
         <div class="card text-dark border-success bg-warning">
             <div class="card-header">Get MSTeams Code</div>
             <div class="card-body">
-            <h5 class="card-title"><b>Công cụ lấy code Teams bằng mã lớp</b></h5>
-            <p class="card-text">Chỉ hỗ trợ viện ĐTVT, tìm mã lớp theo HP bằng QLĐT.
-                <br>Chọn kỳ học(các kỳ onl gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không phải tất cả đều tìm được (chỉ có link).</p>
+            <h5 class="card-title"><b>Công cụ lấy code Teams theo mã lớp</b></h5>
+            <p class="card-text">Chỉ hỗ trợ viện ĐTVT, lất mã lớp để tra HP bằng QLĐT.
+                <br>Chọn kỳ học (các kỳ online gần đây bao gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không phải tất cả đều tìm được code (chỉ có link).</p>
             <div class="card">
                 <div class="card-body">
                     <div class="mb-3">
@@ -114,7 +114,7 @@
                     </div>
                     <div id="alert-range">                        
                     </div>                   
-                     <button id="check" type="button" class="btn btn-primary" onclick="check();">Check</button>
+                     <button id="check" type="button" class="btn btn-success" onclick="check();">Check</button>
                 </div>
               </div>
 
