--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>SET | GetTeamsCode</title>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="/static/img/logo.png">
     <meta charset="utf-8" />
     <meta name="description" content="Công cụ lấy code lớp MSTeams các mã lớp viện ĐTVT.">
     <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
     <meta name="author" content="Đức Lưu Văn">
-    <meta property="og:image" content="thumb.png">
+    <meta property="og:image" content="/static/img/thumb.png">
     <link rel="icon" href="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <link rel="stylesheet/less" type="text/css" href="style2.less" />
+    <link rel="stylesheet/less" type="text/css" href="style-sub.less" />
     <script src="//cdn.jsdelivr.net/npm/less@3.13"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -34,7 +34,7 @@
 
         gtag('config', 'G-9QPGMP7X42');
     </script>
-    <script src="/get-teams-code.js"></script>
+    <script src="js/get-teams-code.js"></script>
 </head>
 
 <body>
@@ -58,7 +58,7 @@
     <div class="headx">
         <div class="container-fluid">
             <div class="headx-logo d-none d-lg-inline-flex">
-                <img src="avatar.jpg" class="logo-top" />
+                <img src="/static/img/avatar.jpg" class="logo-top" />
             </div>
             <div class="headx-text">
                 <p class="headx-name">
