--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>Resume | LuuVanDuc</title>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="/static/img/logo.png">
     <meta charset="utf-8" />
     <meta name="description" content="This is resume of a student from HUST, an engineer looking for work in Programming.">
     <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
     <meta name="author" content="Đức Lưu Văn">
-    <meta property="og:image" content="thumb.png">
+    <meta property="og:image" content="/static/img/thumb.png">
     <link rel="icon" href="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <link rel="stylesheet/less" type="text/css" href="style.less" />
+    <link rel="stylesheet/less" type="text/css" href="/static/css/style.less" />
     <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
  
 
@@ -42,7 +42,7 @@
     <div class="headx">
         <div class="container-fluid">
             <div class="headx-logo d-none d-lg-inline-flex">
-                <img src="avatar.jpg" class="logo-top" />
+                <img src="/static/img/avatar.jpg" class="logo-top" />
             </div>
             <div class="headx-text">
                 <p class="headx-name">
@@ -70,7 +70,7 @@
                     <button class="btn btn-success"><i class="fab fa-linkedin"></i> LINKEDIN</button>
                 </a>
 
-                <a href="/CV_DucLuuVan.pdf" target="_blank">
+                <a href="static/file/CV_DucLuuVan.pdf" target="_blank">
                     <button class="btn btn-danger"><i class="fas fa-download"></i> DOWNDLOAD MY CV</button>
                 </a>
             </div>   
