--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -17,7 +17,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <link rel="stylesheet/less" type="text/css" href="style-sub.less" />
+    <link rel="stylesheet/less" type="text/css" href="/static/css/style-sub.less" />
     <script src="//cdn.jsdelivr.net/npm/less@3.13"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -34,7 +34,7 @@
 
         gtag('config', 'G-9QPGMP7X42');
     </script>
-    <script src="js/get-teams-code.js"></script>
+    <script src="static/js/get-teams-code.js"></script>
 </head>
 
 <body>
