--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
                 <div class="content-range">
                     <div class="main-title"><i class="fas fa-play"></i> CERTIFICATE</div>
                     <div class=content-main>
+                        <p> <b><i class="fas fa-certificate"></i>  Top 8 - RPA Top Talent Contest [akaBot]   </b> </p>
+                        <p>Develop RPA robots on akaBot platform with the given PDD.</p>
+                        <a href="/static/file/RPATopTalent.pdf" target="_blank">
+                            <button class="btn btn-success btn-repos">View Certificate</button>
+                        </a>
+                    </div>
+                    <div class=content-main>
                         <p> <b><i class="fas fa-certificate"></i>  Responsive Web Design [FreeCodeCamp]   </b> </p>
                         <p>• Course contain : Basic HTML and HTML5, Basic CSS, Applied Visual Design, Applied Accessibility,
                             Responsive Web Design Principles, CSS Flexbox, CSS Grid.</p>
